syntax = "proto3";

package courier;

option go_package = "go-courier/proto/courier";

service CourierService{
    rpc RegisterCourier(CourierRequest) returns (CourierResponse);
    rpc GetCourier(GetCourierRequest) returns (Courier);
    rpc ListCourier(EmptyCourier) returns (CourierList);
    rpc UpdateCourier(UpdateCourierRequest) returns (CourierResponse);
    rpc DeleteCourier(DeleteCourierRequest) returns (CourierResponse);
    rpc ChangeAvailability(ChangeAvailabilityCourierRequest) returns (CourierResponse);
}

message CourierRequest{
    optional string name = 1;
    optional string phone_number = 2;
}

message CourierResponse{
    string message = 1;
}

message GetCourierRequest{
    int64 id = 1;
}

message Courier{
    int64 id = 1;
    string name = 2;
    string phone_number = 3;
    bool available = 4;
    int64 added_by = 5;
}

message CourierList{
    repeated Courier couriers = 1;
}

message EmptyCourier{}

message UpdateCourierRequest{
    int64 id = 1;
    optional string name = 2;
    optional string phone_number = 3;
}

message DeleteCourierRequest{
    int64 id = 1;
}

message ChangeAvailabilityCourierRequest{
    int64 id = 1;
}