syntax = "proto3";

package order;

option go_package = "go-courier/proto/order";

service OrderService{
    rpc CreateOrder(OrderRequest) returns (OrderResponse);
    rpc GetOrder(GetOrderRequest) returns (Order);
    rpc ListOrder(EmptyOrder) returns (OrderList);
    rpc UpdateOrder(UpdateOrderRequest) returns (UpdateOrderResponse);
    rpc DeleteOrder(DeleteOrderRequest) returns (DeleteOrderResponse);
    rpc SetOrderToComplete(SetOrderRequest) returns (SetOrderResponse);
    rpc SetOrderToDelivering(SetOrderRequest) returns (SetOrderResponse); 
}

message OrderRequest{
    int64 sender_id = 1;
    repeated string items = 2;
    optional string address = 3;
}

message OrderResponse{
    int64 id = 1;
    string status = 2;
}

message GetOrderRequest{
    int64 id = 1;
}

message Order{
    int64 id = 1;
    int64 sender_id = 2;
    repeated string items = 3;
    string address = 4;
    string status = 5;
    string created_at = 6;
}

message OrderList{
    repeated Order orders = 1;
}

message EmptyOrder{}

message UpdateOrderRequest{
    int64 id = 1;
    repeated string items = 2;
    optional string address = 3;
}

message UpdateOrderResponse{
    string message = 1;
}

message DeleteOrderRequest{
    int64 id = 1;
}

message DeleteOrderResponse{
    string message = 1;
}

message SetOrderRequest{
    int64 id = 1;
}

message SetOrderResponse{
    string message = 1;
}